; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpio/extr_gpio-wcove.c_wcove_update_irq_ctrl.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpio/extr_gpio-wcove.c_wcove_update_irq_ctrl.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.wcove_gpio = type { i32, i32 }

@CTRL_IN = common dso_local global i32 0, align 4
@CTLI_INTCNT_BE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.wcove_gpio*, i32)* @wcove_update_irq_ctrl to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @wcove_update_irq_ctrl(%struct.wcove_gpio* %0, i32 %1) #0 {
  %3 = alloca %struct.wcove_gpio*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store %struct.wcove_gpio* %0, %struct.wcove_gpio** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load i32, i32* %4, align 4
  %7 = load i32, i32* @CTRL_IN, align 4
  %8 = call i32 @to_reg(i32 %6, i32 %7)
  store i32 %8, i32* %5, align 4
  %9 = load i32, i32* %5, align 4
  %10 = icmp slt i32 %9, 0
  br i1 %10, label %11, label %12

11:                                               ; preds = %2
  br label %22

12:                                               ; preds = %2
  %13 = load %struct.wcove_gpio*, %struct.wcove_gpio** %3, align 8
  %14 = getelementptr inbounds %struct.wcove_gpio, %struct.wcove_gpio* %13, i32 0, i32 1
  %15 = load i32, i32* %14, align 4
  %16 = load i32, i32* %5, align 4
  %17 = load i32, i32* @CTLI_INTCNT_BE, align 4
  %18 = load %struct.wcove_gpio*, %struct.wcove_gpio** %3, align 8
  %19 = getelementptr inbounds %struct.wcove_gpio, %struct.wcove_gpio* %18, i32 0, i32 0
  %20 = load i32, i32* %19, align 4
  %21 = call i32 @regmap_update_bits(i32 %15, i32 %16, i32 %17, i32 %20)
  br label %22

22:                                               ; preds = %12, %11
  ret void
}

declare dso_local i32 @to_reg(i32, i32) #1

declare dso_local i32 @regmap_update_bits(i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
